Dark Mode Fix

--- a/src/assets/css/material-dashboard-react.css
+++ b/src/assets/css/material-dashboard-react.css
@@ -58,7 +58,7 @@ html * {
     -moz-osx-font-smoothing: grayscale;
 }
 body {
-	background-color: "#EEEEEE";
+	background-color: #EEEEEE;
     margin: 0;
     font-family: Roboto, Helvetica, Arial, sans-serif;
     font-weight: 300;
